almost done with the base theme

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "start": "eleventy --serve --quiet",
     "debug": "cross-env DEBUG=Eleventy* eleventy",
     "debugstart": "cross-env DEBUG=Eleventy* eleventy --serve --quiet",
-    "benchmark": "cross-env DEBUG=Eleventy:Benchmark* eleventy"
+    "benchmark": "cross-env DEBUG=Eleventy:Benchmark* eleventy",
+    "linecount": "git ls-files -- ':!:pnpm-lock.yaml' ':!:public/*' ':!:LICENSE' ':!:content' ':!:*.otf' | xargs wc -l"
   },
   "keywords": [],
   "author": "",
