--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@11ty/eleventy": "^3.0.0"
+    "@11ty/eleventy": "^3.0.0",
+    "@11ty/eleventy-plugin-syntaxhighlight": "^5.0.0",
+    "markdown-it-footnote": "^4.0.0"
   },
   "devDependencies": {
     "glob": "^11.0.1"
