--- a/package.json
+++ b/package.json
@@ -16,12 +16,10 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {
+  "devDependencies": {
     "@11ty/eleventy": "^3.0.0",
     "@11ty/eleventy-plugin-syntaxhighlight": "^5.0.0",
+    "glob": "^11.0.1",
     "markdown-it-footnote": "^4.0.0"
-  },
-  "devDependencies": {
-    "glob": "^11.0.1"
   }
 }
